Added Json support to SaveState. Also added support for all the types used by options (File, Font, Keystroke, Date, Color). Also added support for values to be SaveStates so that values can be nested.